Fix screenshot image is to wide on smaller screens
The forced width meant that the screenshot images overflowed.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,10 +82,6 @@ section.game {
 		
 	}
 
-	.screenshot, .icons {
-		width: 440px;
-	}
-
 	.icons {
 		text-align: center;
 		font-size: 150%;
